# telepathy-python

./: .gitignore  AUTHORS  MANIFEST.in  Makefile.am  NEWS  README  TODO  TODO-PROTO  TODO-SPEC  _boring  autogen.sh  brie.manager  brie.py  cheddar.manager  cheddar.py  clienttest.py  configure.ac  disco.py  doc-generator.py  gabble-test.py  jabber.py  jabbertest.py  libclient.py  msnserver.py  order  pygtkconsole.py  run-with-tmp-session-bus.sh  scw-client.py  setup.py  spec  spec.html  style.css  swiss.manager  swiss.py  telepathy-inspect  test-client.py
client/: clientlib.py  findservice.py  managerregistry.py
doc/: Makefile  doc-generator.py  order  specification.html
docs/: specification.html
examples/: Makefile.am  README  account.py  aliases.py  avatar.py  call-gtk.py  call.py  chatroom.py  connections.py  deny.py  file-transfer.py  generate-manager-file.py  message.py  observer.py  register.py  requests-message.py  roomlist.py  roster.py  stream_tube_client.py  tube-dbus-muc.py  tube-stream-muc.py  tube-stream-private.py  tubeconn.py  watch.py
server/: connmgr.py  jabber.py
services/: org.freedesktop.ipcf.connectionmanager.ipcf
services.in/: org.freedesktop.ipcf.connectionmanager.msn.service
spec/: Channel.xml  Channel_Interface_Group.xml  Channel_Interface_Hold.xml  Channel_Interface_Transfer.xml  Channel_Type_Contact_Search.xml  Channel_Type_Room_List.xml  Channel_Type_Streamed_Media.xml  Channel_Type_Text.xml  Channel_Type_Tubes.xml  Connection.xml  Connection_Interface_Aliasing.xml  Connection_Interface_Avatars.xml  Connection_Interface_Capabilities.xml  Connection_Interface_Contact_Info.xml  Connection_Interface_Forwarding.xml  Connection_Interface_Presence.xml  Connection_Interface_Privacy.xml  Connection_Interface_Renaming.xml  Connection_Manager.xml  Makefile.am  Media_Stream_Handler.xml  Properties_Interface.xml  all.xml
src/: Makefile.am  __init__.py  _version.py  _version.py.in  constants.py  errors.py  interfaces.py
src/client/: Makefile.am  __init__.py  conn.py  interfacefactory.py  managerregistry.py
src/server/: Makefile.am  __init__.py  channel.py  channelmanager.py  conn.py  connmgr.py  debug.py  handle.py  media.py  properties.py
tabby/: conversation.py  room.py  tabby.py  util.py  widgets.py
tabby/data/glade/: conversation.glade  conversation.gladep  login.glade  login.gladep  room.glade  room.gladep
telepathy/: __init__.py  _version.py  constants.py  errors.py  interfaces.py
telepathy/client/: __init__.py  channel.py  clientlib.py  conn.py  connmgr.py  interfacefactory.py  managerregistry.py
telepathy/server/: __init__.py  channel.py  conn.py  connmgr.py  handle.py  ice.py  media.py  properties.py
test/services.in/: org.freedesktop.Telepathy.ConnectionManager.cheddar
tools/: Makefile.am  gabble.def  generrors.py  gengobject.py  genxml.py  jabber.def  libtelepathy.def  python-constants-generator.xsl  python-errors-generator.xsl  python-interfaces-generator.xsl  sip.def  spec-to-python.xsl
