EXTRA_DIST = \
	account.py \
	aliases.py \
	avatar.py \
	call-gtk.py \
	call.py \
	chatroom.py \
	connections.py \
	deny.py \
	file-transfer.py \
	generate-manager-file.py \
	message.py \
	observer.py \
	register.py \
	roomlist.py \
	roster.py \
	stream_tube_client.py \
	tubeconn.py \
	tube-dbus-muc.py \
	tube-stream-muc.py
	tube-stream-private.py
	watch.py
